# warlight-dev

./: .gitignore  CMakeLists.txt  create_submission.sh  read_me
include/warlight-dev/: Bot.h  MCTSManager.h  Node.h  OpponentBot.h  Parser.h  Region.h  State.h  SuperRegion.h  UCT.h  UCTManager.h  patch.h  string_util.hpp
src/: Bot.cpp  MCTSManager.cpp  Node.cpp  OpponentBot.cpp  OpponentBot.h  Parser.cpp  Region.cpp  Region.h  State.cpp  SuperRegion.cpp  SuperRegion.h  UCT.cpp  UCTManager.cpp
submission/: README
submission/v2/: Bot.h  Parser.cpp  Parser.h  Region.cpp  main.cpp
